# train_game_rust

./: .gitignore  README.md
.github/workflows/: CI.yml
frontend/src/: main.rs
train-game-website/: package-lock.json  package.json  tailwind.config.js
train-game-website/src/app/: NumbersForm.tsx  SolutionsDisplay.tsx  form.tsx  layout.tsx  page.tsx
train_game_v2/: Cargo.toml  Shuttle.toml
train_game_v2/src/: calcs.rs  errors.rs  main.rs  multithread.rs  operations.rs  reponses.rs  test.rs
