[package]
name = "train_game_v2"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
shuttle-runtime = "0.16.0"
actix-web = "4.3.1"
shuttle-actix-web = "0.16.0"
tokio = "1.28.1"